--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./server_get_post_put_del.js"
+    "start": "nodemon ./server_completo.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "chalk": "^5.1.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
